--- a/SpaceshipRescue.cabal
+++ b/SpaceshipRescue.cabal
@@ -30,6 +30,7 @@ executable SDLSpaceshipRescue
                        repa >= 3.2,
                        containers >= 0.5.0,
                        json >= 0.7,
-                       random >= 1.0.1
+                       random >= 1.0.1,
+                       vector >= 0.10.9
   -- hs-source-dirs:      
   default-language:    Haskell2010
